deployment/kubernetes/staging/origin-messaging.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: origin-messaging
  namespace: staging
  labels:
    name: origin-messaging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: origin-messaging
        app: origin-messaging
    spec:
      containers:
      - name: origin-messaging
        image: gcr.io/origin-214503/staging/origin-messaging:latest
